// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectNetwork should render 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-1-menu"
      data-testid="SelectNetwork"
      role="combobox"
    >
      <label
        for="downshift-0-input"
        id="downshift-1-label"
      />
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
        data-testid="SelectNetworkInput"
      >
        <div
          class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
        >
          <div
            class="Circle-uw7h4j-0 blBpcG border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500"
            data-testid="SelectNetworkInput__network"
          />
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="downshift-1-menu"
          aria-labelledby="downshift-1-label"
          autocomplete="off"
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
          data-testid="SelectNetworkInput__input"
          id="downshift-0-input"
          placeholder="Enter a cryptoasset name"
          value=""
        />
      </div>
    </div>
    <ul
      aria-labelledby="downshift-1-label"
      class="hidden"
      id="downshift-1-menu"
      role="listbox"
    />
  </div>
</div>
`;

exports[`SelectNetwork should render with networks 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-5-menu"
      data-testid="SelectNetwork"
      role="combobox"
    >
      <label
        for="downshift-4-input"
        id="downshift-5-label"
      />
      <div
        class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
        data-testid="SelectNetworkInput"
      >
        <div
          class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonStartStyle-sc-1obbdqe-1 epSJiV gnQfLB px-4"
        >
          <div
            class="Circle-uw7h4j-0 blBpcG border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500"
            data-testid="SelectNetworkInput__network"
          />
        </div>
        <input
          aria-autocomplete="list"
          aria-controls="downshift-5-menu"
          aria-labelledby="downshift-5-label"
          autocomplete="off"
          class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pl-15"
          data-testid="SelectNetworkInput__input"
          id="downshift-4-input"
          placeholder="Enter a cryptoasset name"
          value=""
        />
      </div>
    </div>
    <ul
      aria-labelledby="downshift-5-label"
      class="hidden"
      id="downshift-5-menu"
      role="listbox"
    />
  </div>
</div>
`;
